--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "typegen:scss": "typed-scss-modules src"
   },
   "dependencies": {
-    "clsx": "^1.2.1",
-    "next": "13.4.5",
+    "clsx": "^2.1.0",
+    "jackspeak": "2.3.6",
+    "next": "14.1.2",
     "react": "^18",
     "react-async-hook": "^4.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-hook-form": "^7.44.3",
-    "react-redux": "^8.0.7",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
@@ -31,14 +32,14 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-next": "14.1.2",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.5",
     "sass": "^1.63.3",
-    "typed-scss-modules": "^7.1.0",
+    "typed-scss-modules": "^8.0.0",
     "typescript": "^5"
   }
 }
