--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "typegen:scss": "typed-scss-modules src"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "clsx": "^1.2.1",
     "next": "13.4.5",
     "react": "^18",
