--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-async-hook": "^4.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.44.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.14.1"
