--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
     "clsx": "^1.2.1",
+    "lodash": "^4.17.21",
     "next": "13.4.5",
     "react": "^18",
     "react-async-hook": "^4.0.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
